--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": ".",
     "typeRoots": [
       "./node_modules/@types",
-      "./types"
+      "./src/types"
     ],
     "paths": {
       "*": [
